--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,31 @@
 }
 
 .body {
+  position: fixed;
   min-height: 100vh;
+  width: 100%;
   background-size: 100vw 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background: url(../img/bg.jpg) no-repeat center;
+}
+
+#hiscoreBox {
+  position: absolute;
+  top: 3rem;
+  right: 5.5rem;
+  font-size: 2rem;
+  font-weight: 800;
+}
+
+#scoreBox {
+  position: absolute;
+  top: 5.5rem;
+  right: 10rem;
+  font-size: 2rem;
+  font-weight: 800;
 }
 
 #board {
@@ -25,13 +43,19 @@
 }
 
 .head {
-  background-color: blue;
+  background: linear-gradient(to right, rgb(198, 145, 255), rgb(255, 0, 136));
+  border: .25vmin solid black;
+  border-radius: 10px;
 }
 
 .snake {
-  background-color: black;
+  background: linear-gradient(to right, green, rgb(0, 232, 0));
+  border: .25vmin solid black;
+  border-radius: 10px;
 }
 
 .food {
-  background-color: red;
+  background: linear-gradient(to right, orange, yellow);
+  border: .25vmin solid black;
+  border-radius: 2rem;
 }
